turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:29: error: ')' expected but 'if' found.
  if (rule(state)(couleurActuelle)(1) == DEVANT) {avance()}
  ^